--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,25 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+    <ion-navbar color="transparent">
+        <ion-buttons start>
+           <button ion-button color="primary" menuToggle>
+              <ion-icon name="menu"></ion-icon>
+          </button>
+        </ion-buttons>
+        <ion-buttons end>
+            <button (click)="getCurrentLocation()" color="primary" icon-only ion-button>
+                <ion-icon name="ios-navigate-outline"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
-
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <div class="logo">
+        <img width="60%" src="assets/img/logo-dark.png" />
+        <h1 color="energized"><i>Find your barber</i></h1>
+    </div>
+    <ion-list class="postcode">
+      <ion-label color="primary" stacked>Search by postcode</ion-label>
+      <ion-input value="{{postcode}}" placeholder="Your postcode"></ion-input>  
+      <button class="homeSearch" ion-button full>Search</button>
+  </ion-list>
 </ion-content>
