--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <ion-slides [options]="sliderOptions">
+    <!--<ion-slides [options]="sliderOptions">
 
         <ion-slide>
             <h3>Welcome</h3>
@@ -22,7 +22,7 @@
             <img src="assets/img/slide2.png" />
         </ion-slide>
 
-    </ion-slides>
+    </ion-slides>-->
 </ion-content>
 <ion-footer>
     <ion-row>
